...
  // Role Selection Screen
  static const String roleSelectionTitle = 'Select your service role';
  static const String roleSelectionSubtitle = 'Choose your role to continue';

  // User Roles
  static const String fieldExecutive = 'Field Executive';
  static const String deliveryMan = 'Delivery Man';
  static const String salesPerson = 'Sales Person';

  // App Name
  static const String appName = 'CrackTech';

  // Login Screen
  static const String welcomeBack = 'Welcome Back!';
...
